k8s/frontend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: streamnest-frontend
  namespace: streamnest-frontend

spec:
  selector:
    app: streamnest-frontend

  ports:
  - port: 80
    targetPort: 80
    

  type: NodePort
