k8s/streamnest-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: streamnest-ingress
  namespace: streamnest
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
    nginx.ingress.kubernetes.io/proxy-body-size: "500m"
    nginx.ingress.kubernetes.io/proxy-read-timeout: "600"
    nginx.ingress.kubernetes.io/proxy-send-timeout: "600"
    nginx.ingress.kubernetes.io/proxy-connect-timeout: "600"
    nginx.ingress.kubernetes.io/client-body-buffer-size: "16m"
    nginx.ingress.kubernetes.io/proxy-request-buffering: "off"

spec:
  ingressClassName: nginx

  tls:
    - hosts:
        - streamnest.rajplatform.online
      secretName: streamnest-tls

  rules:
    - host: streamnest.rajplatform.online
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: streamnest-frontend
                port:
                  number: 80

          - path: /api
            pathType: Prefix
            backend:
              service:
                name: streamnest-backend
                port:
                  number: 3000

          - path: /uploads
            pathType: Prefix
            backend:
              service:
                name: streamnest-backend
                port:
                  number: 3000
